--- a/pkg-manager/plugin-commands-installation/tsconfig.json
+++ b/pkg-manager/plugin-commands-installation/tsconfig.json
@@ -55,6 +55,9 @@
       "path": "../../packages/constants"
     },
     {
+      "path": "../../packages/dependency-path"
+    },
+    {
       "path": "../../packages/error"
     },
     {
