test: catalog protocol specifiers are replaced on publish

--- a/releasing/plugin-commands-publishing/tsconfig.json
+++ b/releasing/plugin-commands-publishing/tsconfig.json
@@ -16,6 +16,8 @@
       "path": "../../__utils__/test-ipc-server"
     },
     {
+      "path": "../../catalogs/config"
+    },
     {
       "path": "../../catalogs/resolver"
     },
