--- a/pkg-manifest/exportable-manifest/tsconfig.json
+++ b/pkg-manifest/exportable-manifest/tsconfig.json
@@ -13,6 +13,12 @@
       "path": "../../__utils__/prepare"
     },
     {
+      "path": "../../catalogs/config"
+    },
+    {
+      "path": "../../catalogs/resolver"
+    },
+    {
       "path": "../../packages/error"
     },
     {
