feat: replace catalog protocol when publishing

--- a/releasing/plugin-commands-publishing/tsconfig.json
+++ b/releasing/plugin-commands-publishing/tsconfig.json
@@ -16,6 +16,10 @@
       "path": "../../__utils__/test-ipc-server"
     },
     {
+    {
+      "path": "../../catalogs/resolver"
+    },
+    {
       "path": "../../cli/cli-utils"
     },
     {
